# SOPShield

./: .gitignore  README.md  main.py  prompt_design.md  pyproject.toml  requirements.txt
app/: __init__.py  escalation.py  models.py  session.py
app/sop/: loader.py  retrieval.py
data/: README.md  bloom_aesthetics_demo.json  bloom_aesthetics_sop.json  bloom_aesthetics_sop.md  northstar_dental.json
src/sopshield/: __init__.py  audit_log.py  cli.py  escalation.py  prompts.py  session.py  startup.py  workflow.py
src/sopshield/providers/: __init__.py  base.py  ollama.py  openai_api.py  rule_based.py
src/sopshield/sop/: __init__.py  grounding.py  loader.py  retrieval.py  validation.py
src/sopshield/stages/: __init__.py  faq.py  qualification.py  summary.py
test_transcripts/: 01_faq_from_sop.md  02_full_session_qualification_summary.md  02_session_summary.md  03_escalation_low_confidence_sop_gap.md  04_escalation_angry_sentiment.md  05_escalation_out_of_scope.md  06_escalation_explicit_human_request.md  06_escalation_human_request.md  07_escalation_complaint.md  08_escalation_repeated_unanswered.md  08_escalation_unanswered.md  09_escalation_pricing_negotiation.md
tests/: test_audit_log.py  test_escalation.py  test_faq.py  test_northstar.py  test_qualification.py  test_retrieval.py  test_sop_loader.py  test_summary.py  test_workflow.py
